# CodingX

./: .gitignore  CMakeLists.txt  README.md
App/TAppCodingInterview/001_IsPalindrome/: main.cpp
App/TAppCodingInterview/005_duplication_in_array/: main.cpp
App/TAppCodingInterview/006_MoreDuplicationInArray/: main.cpp
App/TAppCodingInterview/007_SearchInMatrix/: main.cpp
App/TAppCodingInterview/008_SearchInPartiallySortedMatrix/: LibSearch.cpp  LibSearch.h  main.cpp
App/TAppCodingInterview/009_ReplaceBlanks/: Lib.cpp  Lib.h  LibReplaceBlanks.cpp  LibReplaceBlanks.h  main.cpp
App/TAppCodingInterview/010_MergeSortedArrays/: LibMergeSortedArrays.cpp  LibMergeSortedArrays.h  main.cpp
App/TAppCppPrimerPlus/001_If/: main.cpp
App/TAppCppPrimerPlus/002_IfElse/: main.cpp
App/TAppCppPrimerPlus/003_Not/: main.cpp
App/TAppExtendedCollection/001_StringToInt/: main.cpp
App/TAppExtendedCollection/002_SinglyLinkedList/: main.cpp
App/TAppExtendedCollection/003_ArrayAndPointer/: main.cpp
App/TAppExtendedCollection/004_BaseConversion/: main.cpp
App/TAppExtendedCollection/StringToInt/: main.cpp
App/TAppPlayground/000_HaveATry/: main.cpp
App/TAppPlayground/001_NatureOfStringAndChar/: main.cpp
App/TAppPlayground/002_IntegerBoundary/: main.cpp
App/TAppPlayground/003_DynamicMemoryAllocation/: main.cpp
App/TAppPlayground/004_MatrixInCpp/: main.cpp
App/TAppPlayground/005_StringInCpp/: 01_Constructor.cpp  02_Getline.cpp
App/TAppPlayground/IntegerBoundary/: main.cpp
App/TAppPlayground/NatureOfStringAndChar/: main.cpp
Lib/TLibCodingInterview/: DuplicationInArray.cpp  DuplicationInArray.h  ListNode.cpp  ListNode.h  MoreDuplicationInArray.cpp  MoreDuplicationInArray.h
Lib/TLibExceptions/: NotBinary.cpp  NotBinary.h  OutOfRange.cpp  OutOfRange.h  SimpleOutOfRange.cpp  SimpleOutOfRange.h
Lib/TLibExtendedCollection/: BinaryToDecimal.cpp  BinaryToDecimal.h  DecimalToAny.cpp  DecimalToAny.h  OctalToBinary.cpp  OctalToBinary.h  SinglyLinkedList.cpp  SinglyLinkedList.h  StringToInt.cpp  StringToInt.h
Lib/TLibPlayground/: MatrixInCpp.cpp  MatrixInCpp.h
Lib/TLibUtils/: TypeDef.h
